crates/rstest-bdd/tests/fixtures_macros/scenario_result_requires_unit.stderr
error: #[scenario] bodies must return () or a unit Result/StepResult
 --> tests/fixtures_macros/scenario_result_requires_unit.rs:6:30
  |
6 | fn scenario_result_payload() -> Result<u32, &'static str> {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
